--- a/index.html
+++ b/index.html
@@ -221,19 +221,19 @@
             
             <div class="services-container">
                 <div class="services-grid">
-                    <a href="Strategic Advisory/index.html" class="service-card">
+                    <a href="Strategic%20Advisory/index.html" class="service-card">
                         <div class="service-icon">🎯</div>
                         <h3>Strategic Advisory</h3>
                         <p>We support organizations in shaping clear, forward-looking strategies for national health system reform, multisectoral programming, public-private alignment, and advancement of new models of care.</p>
                         <span class="learn-more">Learn More</span>
                     </a>
-                    <a href="Program & Platform Design/index.html" class="service-card">
+                    <a href="Program%20%26%20Platform%20Design/index.html" class="service-card">
                         <div class="service-icon">🏗️</div>
                         <h3>Program & Platform Design</h3>
                         <p>We help design scalable, equitable health programs and platforms, integrating innovation, delivery models, and systems thinking across diverse health areas and geographies.</p>
                         <span class="learn-more">Learn More</span>
                     </a>
-                    <a href="Execution Support/index.html" class="service-card">
+                    <a href="Execution%20Support/index.html" class="service-card">
                         <div class="service-icon">⚡</div>
                         <h3>Execution Support</h3>
                         <p>From piloting new approaches to scaling implementation, we provide hands-on support to translate strategy into action, ensuring operational readiness and real-world impact.</p>
@@ -246,7 +246,7 @@
                         <div class="carousel-wrapper">
                             <div class="services-track" id="servicesTrack">
                                 <div class="carousel-slide active">
-                                    <a href="Strategic Advisory/index.html" class="service-card">
+                                    <a href="Strategic%20Advisory/index.html" class="service-card">
                                         <div class="service-icon">🎯</div>
                                         <h3>Strategic Advisory</h3>
                                         <p>We support organizations in shaping clear, forward-looking strategies for national health system reform, multisectoral programming, and public-private alignment.</p>
@@ -254,7 +254,7 @@
                                     </a>
                                 </div>
                                 <div class="carousel-slide">
-                                    <a href="Program & Platform Design/index.html" class="service-card">
+                                    <a href="Program%20%26%20Platform%20Design/index.html" class="service-card">
                                         <div class="service-icon">🏗️</div>
                                         <h3>Program & Platform Design</h3>
                                         <p>We help design scalable, equitable health programs and platforms, integrating innovation and delivery models across diverse health areas.</p>
@@ -262,7 +262,7 @@
                                     </a>
                                 </div>
                                 <div class="carousel-slide">
-                                    <a href="Execution Support/index.html" class="service-card">
+                                    <a href="Execution%20Support/index.html" class="service-card">
                                         <div class="service-icon">⚡</div>
                                         <h3>Execution Support</h3>
                                         <p>From piloting to scaling implementation, we provide hands-on support to translate strategy into action and ensure real-world impact.</p>
