--- a/Execution Support/index.html
+++ b/Execution Support/index.html
@@ -12,15 +12,15 @@
 <nav id="navbar">
 <div class="container">
 <div class="nav-container">
-<a href="../index.html" class="logo">ARCLINE ADVISORY</a>
+<a href="../" class="logo">ARCLINE ADVISORY</a>
 <ul class="nav-links">
-<li><a href="../index.html#home">Home</a></li>
-<li><a href="../index.html#about">About</a></li>
-<li><a href="../index.html#services">Services</a></li>
-<li><a href="../index.html#advisors">Team</a></li>
-<li><a href="../index.html#contact">Contact</a></li>
+<li><a href="../">Home</a></li>
+<li><a href="../#about">About</a></li>
+<li><a href="../#services">Services</a></li>
+<li><a href="../#advisors">Team</a></li>
+<li><a href="../#contact">Contact</a></li>
 </ul>
-<a href="../index.html#contact" class="cta-button">Get Started</a>
+<a href="../#contact" class="cta-button">Get Started</a>
 <div class="mobile-menu-btn" id="mobileMenuBtn">
 <span></span><span></span><span></span>
 </div>
@@ -28,11 +28,11 @@
 </div>
 <div class="mobile-menu" id="mobileMenu">
 <ul>
-<li><a href="../index.html#home">Home</a></li>
-<li><a href="../index.html#about">About</a></li>
-<li><a href="../index.html#services">Services</a></li>
-<li><a href="../index.html#advisors">Team</a></li>
-<li><a href="../index.html#contact">Contact</a></li>
+<li><a href="../">Home</a></li>
+<li><a href="../#about">About</a></li>
+<li><a href="../#services">Services</a></li>
+<li><a href="../#advisors">Team</a></li>
+<li><a href="../#contact">Contact</a></li>
 </ul>
 </div>
 </nav>
@@ -169,7 +169,7 @@
 <p>Transform your health initiatives from strategy to successful implementation with proven execution support that delivers real-world impact.</p>
 <div class="cta-buttons">
 <button onclick="openModal()" class="btn-primary">Schedule Implementation Consultation</button>
-<a href="../index.html#contact" class="btn-secondary">Learn More About Our Process</a>
+<a href="../#contact" class="btn-secondary">Learn More About Our Process</a>
 </div>
 </div>
 </section>
