--- a/Program & Platform Design/index.html
+++ b/Program & Platform Design/index.html
@@ -12,15 +12,15 @@
 <nav id="navbar">
 <div class="container">
 <div class="nav-container">
-<a href="../index.html" class="logo">ARCLINE ADVISORY</a>
+<a href="../" class="logo">ARCLINE ADVISORY</a>
 <ul class="nav-links">
-<li><a href="../index.html#home">Home</a></li>
-<li><a href="../index.html#about">About</a></li>
-<li><a href="../index.html#services">Services</a></li>
-<li><a href="../index.html#advisors">Team</a></li>
-<li><a href="../index.html#contact">Contact</a></li>
+<li><a href="../">Home</a></li>
+<li><a href="../#about">About</a></li>
+<li><a href="../#services">Services</a></li>
+<li><a href="../#advisors">Team</a></li>
+<li><a href="../#contact">Contact</a></li>
 </ul>
-<a href="../index.html#contact" class="cta-button">Get Started</a>
+<a href="../#contact" class="cta-button">Get Started</a>
 <div class="mobile-menu-btn" id="mobileMenuBtn">
 <span></span><span></span><span></span>
 </div>
@@ -28,11 +28,11 @@
 </div>
 <div class="mobile-menu" id="mobileMenu">
 <ul>
-<li><a href="../index.html#home">Home</a></li>
-<li><a href="../index.html#about">About</a></li>
-<li><a href="../index.html#services">Services</a></li>
-<li><a href="../index.html#advisors">Team</a></li>
-<li><a href="../index.html#contact">Contact</a></li>
+<li><a href="../">Home</a></li>
+<li><a href="../#about">About</a></li>
+<li><a href="../#services">Services</a></li>
+<li><a href="../#advisors">Team</a></li>
+<li><a href="../#contact">Contact</a></li>
 </ul>
 </div>
 </nav>
@@ -208,7 +208,7 @@
 <div class="container">
 <h2 class="section-title" style="color: white;">Ready to Design Your Health Platform?</h2>
 <p class="section-subtitle" style="color: rgba(255,255,255,0.9); margin-bottom: 30px;">Let's collaborate to create scalable, equitable health solutions that drive real-world impact.</p>
-<a href="../index.html#contact" class="cta-btn">Start Your Design Journey</a>
+<a href="../#contact" class="cta-btn">Start Your Design Journey</a>
 </div>
 </section>
 
