--- a/Execution Support/index.html
+++ b/Execution Support/index.html
@@ -14,13 +14,13 @@
 <div class="nav-container">
 <a href="../" class="logo">ARCLINE ADVISORY</a>
 <ul class="nav-links">
-<li><a href="../">Home</a></li>
-<li><a href="../#about">About</a></li>
-<li><a href="../#services">Services</a></li>
-<li><a href="../#advisors">Team</a></li>
-<li><a href="../#contact">Contact</a></li>
+<li><a href="../" onclick="navigateToHome()">Home</a></li>
+<li><a href="javascript:void(0)" onclick="navigateToSection('about')">About</a></li>
+<li><a href="javascript:void(0)" onclick="navigateToSection('services')">Services</a></li>
+<li><a href="javascript:void(0)" onclick="navigateToSection('advisors')">Team</a></li>
+<li><a href="javascript:void(0)" onclick="navigateToSection('contact')">Contact</a></li>
 </ul>
-<a href="../#contact" class="cta-button">Get Started</a>
+<a href="javascript:void(0)" onclick="navigateToSection('contact')" class="cta-button">Get Started</a>
 <div class="mobile-menu-btn" id="mobileMenuBtn">
 <span></span><span></span><span></span>
 </div>
@@ -28,11 +28,11 @@
 </div>
 <div class="mobile-menu" id="mobileMenu">
 <ul>
-<li><a href="../">Home</a></li>
-<li><a href="../#about">About</a></li>
-<li><a href="../#services">Services</a></li>
-<li><a href="../#advisors">Team</a></li>
-<li><a href="../#contact">Contact</a></li>
+<li><a href="../" onclick="navigateToHome()">Home</a></li>
+<li><a href="javascript:void(0)" onclick="navigateToSection('about')">About</a></li>
+<li><a href="javascript:void(0)" onclick="navigateToSection('services')">Services</a></li>
+<li><a href="javascript:void(0)" onclick="navigateToSection('advisors')">Team</a></li>
+<li><a href="javascript:void(0)" onclick="navigateToSection('contact')">Contact</a></li>
 </ul>
 </div>
 </nav>
@@ -169,7 +169,7 @@
 <p>Transform your health initiatives from strategy to successful implementation with proven execution support that delivers real-world impact.</p>
 <div class="cta-buttons">
 <button onclick="openModal()" class="btn-primary">Schedule Implementation Consultation</button>
-<a href="../#contact" class="btn-secondary">Learn More About Our Process</a>
+<a href="javascript:void(0)" onclick="navigateToSection('contact')" class="btn-secondary">Learn More About Our Process</a>
 </div>
 </div>
 </section>
@@ -219,10 +219,20 @@
 </footer>
 
 <script>
+// Clean navigation functions
+function navigateToHome() {
+    window.location.href = '../';
+}
+
+function navigateToSection(section) {
+    window.location.href = '../#' + section;
+}
+
 function openModal(){const e=document.getElementById('contactModal');e&&(e.style.display='block',document.body.style.overflow='hidden')}
 function closeModal(){const e=document.getElementById('contactModal');e&&(e.style.display='none',document.body.style.overflow='auto')}
 function handleSubmit(e){e.preventDefault(),alert('Thank you for your interest! We will contact you within 24 hours to discuss your implementation needs.'),closeModal(),e.target.reset()}
 window.onclick=e=>{const t=document.getElementById('contactModal');e.target===t&&closeModal()};
+
 // Mobile Menu
 const btn = document.getElementById('mobileMenuBtn');
 const menu = document.getElementById('mobileMenu');
@@ -231,6 +241,7 @@ btn.classList.toggle('active');
 menu.classList.toggle('active');
 document.body.style.overflow = menu.classList.contains('active') ? 'hidden' : '';
 });
+
 // Close mobile menu on link click
 document.querySelectorAll('.mobile-menu a').forEach(link => {
 link.addEventListener('click', () => {
@@ -239,8 +250,8 @@ menu.classList.remove('active');
 document.body.style.overflow = '';
 });
 });
+
 window.addEventListener('scroll',()=>{const e=document.querySelector('nav');e&&(e.style.background=window.scrollY>50?'rgba(255,255,255,0.98)':'rgba(255,255,255,0.95)')});
-document.addEventListener('DOMContentLoaded',()=>{document.querySelectorAll('a[href^="#"]').forEach(e=>{e.addEventListener('click',t=>{t.preventDefault();const n=document.querySelector(e.getAttribute('href'));n&&n.scrollIntoView({behavior:'smooth'})})})});
 </script>
 </body>
 </html>
